gitea/k8s/kubectl/gitea/30-gitlab-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-service
  namespace: gitlab
  # selfLink: /api/v1/namespaces/kubernetes-dashboard/services/kubernetes-dashboard
  # uid: a47d547e-1316-49e6-b9ef-88c0b7ce3d07
  # resourceVersion: '521'
  # creationTimestamp: '2020-12-09T23:59:00Z'
  labels:
    app.kubernetes.io/name: gitlab
    app.kubernetes.io/instance: gitlab-gitlab
    # app.kubernetes.io/version: "5.7.21"
    app.kubernetes.io/component: scm
    app.kubernetes.io/part-of: gitlab
  # annotations:
  #   kubectl.kubernetes.io/last-applied-configuration: >
  #     {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"k8s-app":"kubernetes-dashboard"},"name":"kubernetes-dashboard","namespace":"kubernetes-dashboard"},"spec":{"ports":[{"port":443,"targetPort":8443}],"selector":{"k8s-app":"kubernetes-dashboard"}}}
spec:
  ports:
    - name: gitlab-https
      port: 80
      protocol: TCP
      targetPort: 80
    - name: gitlab-http
      port: 443
      protocol: TCP
      targetPort: 443
    - name: gitlab-ssh
      port: 22
      protocol: TCP
      targetPort: 22
  selector:
    app.kubernetes.io/name: gitlab
  # clusterIP: 10.107.38.191
  type: LoadBalancer
  # sessionAffinity: None
status:
  loadBalancer: {}
