gitea/k8s/kubectl/gitea/40-gitlab-ingress-dev.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: gitlab-ingress
  namespace: gitlab
  labels:
    app.kubernetes.io/name: gitlab
    app.kubernetes.io/instance: gitlab-gitlab
    app.kubernetes.io/component: scm
    app.kubernetes.io/part-of: gitlab
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  rules:
    - host: gitlab.dev.localdomain
      http:
        paths:
          - path: /
            backend:
              serviceName: gitlab-service
              servicePort: 80
# status:
#   loadBalancer:
#     ingress:
#       - ip: 192.168.1.141
